# cmake_game_SFML_box2d_bootstrap

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.h.in
box2d/: CMakeLists.txt
src/: foo.cpp  main.cpp
